--- a/eventualizr-web-angular/src/main/webapp/index.html
+++ b/eventualizr-web-angular/src/main/webapp/index.html
@@ -9,6 +9,7 @@
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
+    <li><a href="#/session">session</a></li>
   </ul>
 
   <div ng-view></div>
@@ -21,6 +22,9 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
   <script src="js/app.js"></script>
+  <script src="lib/http_auth/angular-mocks.js"></script>
+  <script src="lib/http_auth/content-mocks.js"></script>
+  <script src="lib/http_auth/http-auth-interceptor.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
